fix java.lang.reflect.InaccessibleObjectException caused by Mockito
ref: https://stackoverflow.com/questions/68113065/mockito-inaccessible-object-exception-while-creating-a-mock-object

To quote:
"This can happen if Mockito requires reflective access to non-public parts in a Java module.
you can get around this by explicitly allowing access via --add-opens in your java call"